--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://misharosa.github.io/test_plantIn",
+  "homepage": ".",
   "name": "test_plantln",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +15,7 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
